<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:background="@drawable/dialog_background"
        android:clickable="true"
        android:elevation="@dimen/z_fab"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:paddingBottom="@dimen/padding_normal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_float_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_float_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?colorControlNormal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/actions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:enabled="false"
                android:text="@string/login_action" />

        </FrameLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_huge"
            android:indeterminate="true"
            android:indeterminateTintMode="src_in"
            android:visibility="gone" />

    </LinearLayout>

</FrameLayout>